Fix about margin under video on mobile

--- a/src/_sass/base/_page.scss
+++ b/src/_sass/base/_page.scss
@@ -37,6 +37,6 @@
 
 	}
 
-	.about-side {
+	.about-video {
 		margin-bottom: 32px;
 	}
